add autotagging label resolving logic Signed-off-by: Ruirui Zhang <mariazrr@amazon.com>