@@ -8,17 +8,16 @@
 
 package org.opensearch.rule.feature_value_resolver;
 
+import org.opensearch.rule.MatchLabel;
 import org.opensearch.rule.attribute_extractor.AttributeExtractor;
 import org.opensearch.rule.autotagging.Attribute;
 import org.opensearch.rule.storage.AttributeValueStore;
 import org.opensearch.rule.storage.AttributeValueStoreFactory;
 import org.opensearch.test.OpenSearchTestCase;
 
-import java.util.List;
-import java.util.Map;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.Optional;
-import java.util.Set;
-import java.util.TreeMap;
 
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
@@ -27,117 +26,107 @@ import static org.mockito.Mockito.when;
 public class FeatureValueResolverTests extends OpenSearchTestCase {
 
     private AttributeValueStoreFactory storeFactory;
-    private AttributeExtractor<String> extractor;
-    private AttributeValueStore<String, String> store;
-    private Attribute attribute;
+    private AttributeValueStore<String, String> store1;
+    private AttributeValueStore<String, String> store2;
+    private AttributeExtractor<String> extractor1;
+    private AttributeExtractor<String> extractor2;
+    private Attribute attr1;
+    private Attribute attr2;
 
     public void setUp() throws Exception {
         super.setUp();
         storeFactory = mock(AttributeValueStoreFactory.class);
-        extractor = mock(AttributeExtractor.class);
-        store = mock(AttributeValueStore.class);
-        attribute = mock(Attribute.class);
-    }
-
-    public void testResolveWithNoExtractorsReturnsEmptyIntersection() {
-        FeatureValueResolver resolver = new FeatureValueResolver(storeFactory);
-        FeatureValueResolver.FeatureValueResolutionResult result = resolver.resolve(List.of());
-        assertNotNull(result);
-        assertTrue(result.resolveLabel().isEmpty());
-    }
-
-    public void testResolveSingleExtractorSingleSubfieldSingleValue() {
-        when(extractor.getAttribute()).thenReturn(attribute);
-        when(attribute.getPrioritizedSubfields()).thenReturn(new TreeMap<>(Map.of(1, "username")));
-        when(storeFactory.getAttributeValueStore(attribute)).thenReturn(store);
-
-        when(extractor.extract()).thenReturn(List.of("username|alice"));
-        when(store.getAll("username|alice")).thenReturn(List.of(Set.of("label1")));
-
-        FeatureValueResolver resolver = new FeatureValueResolver(storeFactory);
-        FeatureValueResolver.FeatureValueResolutionResult result = resolver.resolve(List.of(extractor));
-
-        assertNotNull(result);
-        Optional<String> resolved = result.resolveLabel();
-        assertTrue(resolved.isPresent());
-        assertEquals("label1", resolved.get());
-    }
-
-    public void testResolveSingleExtractorWithNoSubfieldsDefaultsToEmptyString() {
-        when(extractor.getAttribute()).thenReturn(attribute);
-        when(attribute.getPrioritizedSubfields()).thenReturn(new TreeMap<>());
-        when(storeFactory.getAttributeValueStore(attribute)).thenReturn(store);
-
-        when(extractor.extract()).thenReturn(List.of("|value"));
-        when(store.getAll("|value")).thenReturn(List.of(Set.of("labelX")));
-
-        FeatureValueResolver resolver = new FeatureValueResolver(storeFactory);
-        FeatureValueResolver.FeatureValueResolutionResult result = resolver.resolve(List.of(extractor));
-
-        assertNotNull(result);
-        assertTrue(result.resolveLabel().isPresent());
-        assertEquals("labelX", result.resolveLabel().get());
-    }
-
-    public void testResolveMultipleExtractorsIntersection() {
-        AttributeExtractor<String> extractor1 = mock(AttributeExtractor.class);
-        AttributeExtractor<String> extractor2 = mock(AttributeExtractor.class);
-        Attribute attr1 = mock(Attribute.class);
-        Attribute attr2 = mock(Attribute.class);
-        AttributeValueStore<String, String> store1 = mock(AttributeValueStore.class);
-        AttributeValueStore<String, String> store2 = mock(AttributeValueStore.class);
+        store1 = mock(AttributeValueStore.class);
+        store2 = mock(AttributeValueStore.class);
+        extractor1 = mock(AttributeExtractor.class);
+        extractor2 = mock(AttributeExtractor.class);
+        attr1 = mock(Attribute.class);
+        attr2 = mock(Attribute.class);
 
         when(extractor1.getAttribute()).thenReturn(attr1);
         when(extractor2.getAttribute()).thenReturn(attr2);
-
-        when(attr1.getPrioritizedSubfields()).thenReturn(new TreeMap<>(Map.of(1, "username")));
-        when(attr2.getPrioritizedSubfields()).thenReturn(new TreeMap<>(Map.of(1, "role")));
-
         when(storeFactory.getAttributeValueStore(attr1)).thenReturn(store1);
         when(storeFactory.getAttributeValueStore(attr2)).thenReturn(store2);
-
-        when(extractor1.extract()).thenReturn(List.of("username|alice"));
-        when(extractor2.extract()).thenReturn(List.of("role|admin"));
-
-        when(store1.getAll("username|alice")).thenReturn(List.of(Set.of("label1", "common")));
-        when(store2.getAll("role|admin")).thenReturn(List.of(Set.of("common", "label2")));
-
-        FeatureValueResolver resolver = new FeatureValueResolver(storeFactory);
-        FeatureValueResolver.FeatureValueResolutionResult result = resolver.resolve(List.of(extractor1, extractor2));
-
-        assertNotNull(result);
-        Optional<String> resolved = result.resolveLabel();
-        assertTrue(resolved.isPresent());
-        assertEquals("common", resolved.get());
     }
 
-    public void testResolveWithNoIntersectionReturnsEmpty() {
-        AttributeExtractor<String> extractor1 = mock(AttributeExtractor.class);
-        AttributeExtractor<String> extractor2 = mock(AttributeExtractor.class);
-        Attribute attr1 = mock(Attribute.class);
-        Attribute attr2 = mock(Attribute.class);
-        AttributeValueStore<String, String> store1 = mock(AttributeValueStore.class);
-        AttributeValueStore<String, String> store2 = mock(AttributeValueStore.class);
+    public void testResolveSingleIntersection() {
+        when(attr1.findAttributeMatches(extractor1, store1)).thenReturn(Arrays.asList(
+            new MatchLabel<>("a", 0.9f),
+            new MatchLabel<>("b", 0.8f)
+        ));
+        when(attr2.findAttributeMatches(extractor2, store2)).thenReturn(Arrays.asList(
+            new MatchLabel<>("a", 0.95f),
+            new MatchLabel<>("c", 0.7f)
+        ));
 
-        when(extractor1.getAttribute()).thenReturn(attr1);
-        when(extractor2.getAttribute()).thenReturn(attr2);
+        FeatureValueResolver resolver = new FeatureValueResolver(storeFactory, Arrays.asList(extractor1, extractor2));
+        Optional<String> result = resolver.resolve();
+        assertTrue(result.isPresent());
+        assertEquals("a", result.get());
+    }
 
-        when(attr1.getPrioritizedSubfields()).thenReturn(new TreeMap<>(Map.of(1, "username")));
-        when(attr2.getPrioritizedSubfields()).thenReturn(new TreeMap<>(Map.of(1, "role")));
+    public void testResolveEmptyIntersection() {
+        when(attr1.findAttributeMatches(extractor1, store1)).thenReturn(Arrays.asList(
+            new MatchLabel<>("a", 0.9f)
+        ));
+        when(attr2.findAttributeMatches(extractor2, store2)).thenReturn(Arrays.asList(
+            new MatchLabel<>("b", 0.8f)
+        ));
 
-        when(storeFactory.getAttributeValueStore(attr1)).thenReturn(store1);
-        when(storeFactory.getAttributeValueStore(attr2)).thenReturn(store2);
+        FeatureValueResolver resolver = new FeatureValueResolver(storeFactory, Arrays.asList(extractor1, extractor2));
+        Optional<String> result = resolver.resolve();
+        assertFalse(result.isPresent());
+    }
 
-        when(extractor1.extract()).thenReturn(List.of("username|alice"));
-        when(extractor2.extract()).thenReturn(List.of("role|admin"));
+    public void testResolveTieBreakingWithoutResult() {
+        when(attr1.findAttributeMatches(extractor1, store1)).thenReturn(Arrays.asList(
+            new MatchLabel<>("a", 0.9f),
+            new MatchLabel<>("b", 0.9f),
+            new MatchLabel<>("c", 0.7f)
+        ));
+        when(attr2.findAttributeMatches(extractor2, store2)).thenReturn(Arrays.asList(
+            new MatchLabel<>("a", 0.95f),
+            new MatchLabel<>("b", 0.95f)
+        ));
 
-        when(store1.getAll("username|alice")).thenReturn(List.of(Set.of("label1")));
-        when(store2.getAll("role|admin")).thenReturn(List.of(Set.of("label2")));
+        FeatureValueResolver resolver = new FeatureValueResolver(storeFactory, Arrays.asList(extractor1, extractor2));
+        Optional<String> result = resolver.resolve();
+        assertFalse(result.isPresent());
+    }
 
-        FeatureValueResolver resolver = new FeatureValueResolver(storeFactory);
-        FeatureValueResolver.FeatureValueResolutionResult result = resolver.resolve(List.of(extractor1, extractor2));
+    public void testResolveTieBreaking() {
+        when(attr1.findAttributeMatches(extractor1, store1)).thenReturn(Arrays.asList(
+            new MatchLabel<>("a", 0.9f),
+            new MatchLabel<>("b", 0.9f),
+            new MatchLabel<>("c", 0.7f)
+        ));
+        when(attr2.findAttributeMatches(extractor2, store2)).thenReturn(Arrays.asList(
+            new MatchLabel<>("b", 0.95f),
+            new MatchLabel<>("a", 0.9f)
+        ));
 
-        assertNotNull(result);
-        assertTrue(result.resolveLabel().isEmpty());
+        FeatureValueResolver resolver = new FeatureValueResolver(storeFactory, Arrays.asList(extractor1, extractor2));
+        Optional<String> result = resolver.resolve();
+        assertTrue(result.isPresent());
+        assertEquals("b", result.get());
+    }
+
+    public void testResolveSingleExtractor() {
+        when(attr1.findAttributeMatches(extractor1, store1)).thenReturn(Arrays.asList(
+            new MatchLabel<>("x", 1.0f)
+        ));
+
+        FeatureValueResolver resolver = new FeatureValueResolver(storeFactory, Collections.singletonList(extractor1));
+        Optional<String> result = resolver.resolve();
+        assertTrue(result.isPresent());
+        assertEquals("x", result.get());
+    }
+
+    public void testResolveEmptyFeatureValues() {
+        when(attr1.findAttributeMatches(extractor1, store1)).thenReturn(Collections.emptyList());
+
+        FeatureValueResolver resolver = new FeatureValueResolver(storeFactory, Collections.singletonList(extractor1));
+        Optional<String> result = resolver.resolve();
+        assertFalse(result.isPresent());
     }
 }
